Update Java to 17.